# pobsd-utils

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
pobsd/: Cargo.toml  README.md
pobsd-db/: Cargo.toml
pobsd-db/src/: database.rs  lib.rs  queries.rs  query_result.rs
pobsd-db/tests/: integration_tests.rs
pobsd-db/tests/data/: test-games.db
pobsd-parser/: Cargo.toml  README.md
pobsd-parser/src/: field.rs  game.rs  lib.rs  parser.rs  parser_macros.rs  store_links.rs
pobsd-parser/tests/: integration_test.rs
pobsd-parser/tests/data/: test-games-faulty.db  test-games.db
pobsd-utils/: Cargo.toml
pobsd-utils/src/: library.rs
pobsd/src/: config.rs  lib.rs  library.rs  main.rs
pobsd/src/commands/browse/: app_state.rs  game_details.rs  mod.rs
pobsd/src/parsing/: parser.rs  split_line.rs
src/: lib.rs  main.rs
src/commands/: browse.rs
src/commands/browse/: app_state.rs  game_details.rs  mod.rs
src/db/: game.rs  migrations.rs  mod.rs
src/parser/: field.rs  game.rs  mod.rs  parser.rs  split_line.rs
src/parsing/: field.rs  mod.rs
