[package]
name = "pobsd-parser"
description = "Simplistic parser for the PlayOnBSD Database"
authors = ["Hukadan <me@hukadan.org>"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/Hukadan/pobsd-rs"
documentation = "https://docs.rs/pobsd-parser"
licence = "MIT"
readme = "README.md"
keywords = ["OpenBSD", "PlayOnBSD"]

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
