[package]
name = "pobsd-utils"
description = "Simple tool to interact with the PlayOnBSD database"
version = "0.1.0"
edition = "2021"
authors = ["Hukadan <me@hukadan.org>"]
homepage = "https://github.com/Hukadan/pobsd-rs"
license = "MIT"
readme = "README.md"
keywords = ["OpenBSD", "PlayOnBSD"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
clap = "4"
unveil = "0.3"
pledge = "0.4"
pobsd-parser = "0.2"
