[package]
name = "pobsd"
description = "Simple tool to interact with the PlayOnBSD database"
version = "0.1.0"
edition = "2021"
authors = ["Hukadan <me@hukadan.org>"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/Hukadan/pobsd-rs"
documentation = "https://github.com/Hukadan/pobsd-rs"
license = "MIT"
readme = "README.md"
keywords = ["OpenBSD", "PlayOnBSD"]

[dependencies]
tui = "0.19"
crossterm = "0.26"
serde = "1"
serde_json = "1"
serde_derive = "1"
clap = "4"
unveil = "0.3"
pledge = "0.4"
confy = "0.5"
pobsd-parser = "0.1"